--- a/views/pages/auth/login.ejs
+++ b/views/pages/auth/login.ejs
@@ -1,7 +1,7 @@
 <%- include('../../partials/header.ejs') %>
     <div class="container my-container">
         <div class="row">
-            <div class="col-6 offset-md-3">
+            <div class="col-md-6 offset-md-3">
                 <div class="card card-body">
                     <h4>Login to user account</h4>
                     <form action="/auth/login" method="POST">
