--- a/views/pages/explorer/singlePost.ejs
+++ b/views/pages/explorer/singlePost.ejs
@@ -32,7 +32,7 @@
                     <% if(post.thumbnail){ %>
                         <img class="img-fluid my-2" src="<%= post.thumbnail%>" alt="thumbnail">
                         <% } %>
-                            <section>
+                            <section class="post-body">
                                 <%- post.body %>
                             </section>
                             <section class="my-5">
